// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticPage snapshots tests renders StaticPage with title and text 1`] = `
<div
  className="layout-fill"
>
  <h1
    className="title is-3"
  >
    about
  </h1>
  <Card
    className="layout-card"
    expandable={false}
    expanded={null}
    initiallyExpanded={false}
  >
    <CardHeader
      avatar={null}
      className="card-header"
    >
      <div
        className="columns is-gapless is-mobile"
      >
        <div
          className="column"
        >
          <h2
            className="title is-4"
          >
            This is the card title
          </h2>
        </div>
        <div
          className="column is-narrow is-helpicon"
        />
      </div>
    </CardHeader>
    <CardText
      className="body-1"
    >
      <br />
      <div>
        this is about page
      </div>
    </CardText>
  </Card>
</div>
`;

exports[`StaticPage snapshots tests renders StaticPage with title, text and help button 1`] = `
<div
  className="layout-fill"
>
  <h1
    className="title is-3"
  >
    about
  </h1>
  <Card
    className="layout-card"
    expandable={false}
    expanded={null}
    initiallyExpanded={false}
  >
    <CardHeader
      avatar={null}
      className="card-header"
    >
      <div
        className="columns is-gapless is-mobile"
      >
        <div
          className="column"
        >
          <h2
            className="title is-4"
          >
            This is the card title
          </h2>
        </div>
        <div
          className="column is-narrow is-helpicon"
        >
          <Connect(HelpIcon)
            text="help text"
            title="help"
          />
        </div>
      </div>
    </CardHeader>
    <CardText
      className="body-1"
    >
      <br />
      <div>
        this is about page
      </div>
    </CardText>
  </Card>
</div>
`;
